# stockomatic

./: LICENSE  README.md  pyproject.toml
stockomatic/domain/: stock.py
stockomatic/serializers/: stockjsonencoder.py
stockomatic/use_cases/: list_stocks.py
tests/domain/: stock.py
tests/serializers/: test_stockjsonencoder.py
tests/use_cases/: test_list_stocks.py
