[tool.poetry]
name = "stockomatic"
version = "0.1.0"
description = ""
authors = ["Jonathan Howarth <blueterp@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
black = "^23.3.0"
pylint = "^2.17.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
